feat: add thinking param
